checks when adding child to navigation node